# voc-automation-mcp-server

./: .cursorrules  .env.backup  .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GITHUB_QUICKSTART.md  LICENSE  NEXUS_QUICK_GUIDE.md  QUICK_DEPLOY.md  README.md  USAGE_EXAMPLE.md  create-test-issue.cjs  cursor-mcp-config.json  package-lock.json  package.json  pyproject.toml  test-jira.cjs  test-jira.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  BITBUCKET_INTEGRATION.md  DEPLOYMENT.md  GITHUB_GUIDE.md  NEXUS_DEPLOYMENT.md  PII_PROTECTION_GUIDE.md  QUICKSTART.md  SECURITY.md  USER_GUIDE.md
examples/: cursor-prompts.md  mcp-config-example.json  mcp-config-nexus.json  sample-voc.json
scripts/: deploy-to-nexus.sh  git-init.sh  github-setup.sh  setup-cursor.js
servers/bitbucket-integration-server/: package.json
servers/bitbucket-integration-server/src/: bitbucket-client.ts  index.ts
servers/internal-api-server/: package.json
servers/internal-api-server/src/: api-client.ts  error-resolver.ts  index.ts
servers/jira-integration-server/: package.json
servers/jira-integration-server/src/: assignee-resolver.ts  index.ts  jira-client.ts  teams-notifier.ts
servers/pii-security-server/: package.json
servers/pii-security-server/src/: index.ts  mapping-store.ts  pii-detector.ts
servers/voc-analysis-server/: package.json
servers/voc-analysis-server/src/: index.ts  llm-client.ts  prompt-generator.ts  result-parser.ts  similarity-search.ts  voc-analyzer.ts
servers/voc-analysis-server/src/prompts/: intent-classifier.ts
shared/: package.json
shared/src/: index.ts
shared/src/config/: env-validator.ts
shared/src/utils/: logger.ts  retry-policy.ts
src/bitbucket_integration/: __init__.py  client.py  server.py
src/internal_api/: __init__.py  client.py  errors.py  server.py
src/jira_integration/: __init__.py  assignee.py  client.py  server.py  teams.py
src/pii_security/: __init__.py  detector.py  server.py  store.py
src/shared/: __init__.py  config.py  logger.py  retry.py
src/voc_analysis/: __init__.py  parser.py  prompts.py  server.py  similarity.py
